bk_ida/gccida/c2/strength_reduce
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5599:4: error: expected ';' after expression
rtx v201; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5599:5: error: use of undeclared identifier 'v201'
rtx v201; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5606:4: error: expected ';' after expression
rtx v208; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5606:5: error: use of undeclared identifier 'v208'
rtx v208; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5610:4: error: expected ';' after expression
rtx v212; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5610:5: error: use of undeclared identifier 'v212'
rtx v212; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5611:4: error: expected ';' after expression
rtx v213; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5611:5: error: use of undeclared identifier 'v213'
rtx v213; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5614:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v216; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5616:4: error: expected ';' after expression
rtx v218; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5616:5: error: use of undeclared identifier 'v218'
rtx v218; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5621:4: error: expected ';' after expression
rtx v223; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5621:5: error: use of undeclared identifier 'v223'
rtx v223; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5625:4: error: expected ';' after expression
rtx v227; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5625:5: error: use of undeclared identifier 'v227'
rtx v227; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5626:6: error: use of undeclared identifier 'v228'
rtx *v228; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5631:4: error: expected ';' after expression
rtx v233; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5631:5: error: use of undeclared identifier 'v233'
rtx v233; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/loop.c:5633:4: error: expected ';' after expression
rtx v235; // rbp 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/strength_reduce/src/obj/loop.o] Error 1
